# minimal_plugins

./: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml  run.py
minimal_plugin/: __init__.py
src/: expressions.rs  lib.rs
tests/: test_pig_latinnify.py
