[package]
name = "minimal-plugin"
version = "0.1.0"
edition = "2021"

[lib]
name = "minimal_plugin"
crate-type= ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module", "abi3-py38"] }
pyo3-polars = { version = "0.15.0", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
polars = { version = "0.41.3", features=["dtype-struct"], default-features = false }
polars-core = "0.41.3"
polars-arrow = "0.41.3"
rust-stemmers = "1.2.0"
reverse_geocoder = "4.1.1"

[target.'cfg(target_os = "linux")'.dependencies]
jemallocator = { version = "0.5", features = ["disable_initial_exec_tls"] }

